# rsl_panoptic_mapping

./: .gitmodules  Dockerfile  README.md  docker-compose.yaml
dynamic_mapping/: README.md
dynamic_mapping/dynamic_mapping/: CMakeLists.txt  nodelet_plugins.xml  package.xml
dynamic_mapping/dynamic_mapping/config/: config.yaml
dynamic_mapping/dynamic_mapping/include/dynamic_mapping/: BoundingBox.h  DynamicMappingRos.h  LidarCameraProjector.h  MatchedMessageProcessor.h  MovingObjectsFilter.h  Parameters.h  PointLabeler.h  helpers.h  helpers_impl.hpp
dynamic_mapping/dynamic_mapping/include/dynamic_mapping/tracking/: Detection.h  GaussianState.h  Hungarian.h  KalmanFilter.h  KalmanFilter_impl.hpp  Track.h  Tracker.h
dynamic_mapping/dynamic_mapping/launch/: dynamic_mapping.launch  dynamic_mapping_node.launch  dynamic_mapping_node.launch.py
dynamic_mapping/dynamic_mapping/rviz/: rviz.rviz
dynamic_mapping/dynamic_mapping/src/: DynamicMappingRos.cpp  LidarCameraProjector.cpp  MatchedMessageProcessor.cpp  MovingObjectsFilter.cpp  PointLabeler.cpp  dynamic_mapping_node.cpp  dynamic_mapping_nodelet.cpp  helpers.cpp
dynamic_mapping/dynamic_mapping/src/tracking/: Hungarian.cpp  Track.cpp  Tracker.cpp
dynamic_mapping/ellipsoid_fit/: CMakeLists.txt  package.xml
dynamic_mapping/ellipsoid_fit/include/ellipsoid_fit/: ellipsoid_fit.h
dynamic_mapping/ellipsoid_fit/launch/: ellipsoid_fit.launch.py
dynamic_mapping/ellipsoid_fit/src/: ellipsoid_fit.cpp  ellipsoid_fit_node.cpp
dynamic_mapping/ground_plane_removal/: CMakeLists.txt  package.xml
dynamic_mapping/ground_plane_removal/include/ground_plane_removal/: ElevationMapGroundPlaneRemover.hpp  GroundPlaneRemover.hpp  Parameters.hpp  typedefs.hpp
dynamic_mapping/ground_plane_removal/src/: ElevationMapGroundPlaneRemover.cpp  GroundPlaneRemover.cpp  Parameters.cpp
dynamic_mapping/ground_remover/: CMakeLists.txt  package.xml
dynamic_mapping/ground_remover/config/: config.yaml
dynamic_mapping/ground_remover/include/ground_remover/: elevation_map_ground_remover.h  elevation_map_ground_remover.hpp  ground_remover.h  ground_remover_ros.h  ground_remover_ros.hpp  typedefs.hpp
dynamic_mapping/ground_remover/launch/: ground_remove.launch  ground_remove.launch.py
dynamic_mapping/ground_remover/src/: elevation_map_ground_remover.cpp  ground_remover_node.cpp  ground_remover_ros.cpp
dynamic_mapping/legacy/dynamic_mapping/: CMakeLists.txt  package.xml  setup.py
dynamic_mapping/legacy/dynamic_mapping/dynamic_mapping_py/: dynamic_mapping_node.py
dynamic_mapping/legacy/dynamic_mapping/include/dynamic_mapping/: __init__.py  boundingbox.py  debug.py  matcher.py  moving_objects_filter.py  multitracking.py  projection_utils.py  utils.py  visualization.py
dynamic_mapping/legacy/dynamic_mapping/launch/: dynamic_mapping.launch
dynamic_mapping/legacy/dynamic_mapping/utils/: lidar_odometry_tf.py
dynamic_mapping/message_matching/: CMakeLists.txt  nodelet_plugins.xml  package.xml
dynamic_mapping/message_matching/config/: config.yaml
dynamic_mapping/message_matching/include/message_matching/: MessageMatcher.h  MessageMatcher.hpp  Parameters.h
dynamic_mapping/message_matching/param/: params.yaml
dynamic_mapping/message_matching/src/: MessageMatcher.cpp  message_matching_node.cpp  message_matching_nodelet.cpp
dynamic_mapping/msgs/dynamic_mapping_msgs/: CMakeLists.txt  package.xml
dynamic_mapping/msgs/dynamic_mapping_msgs/msg/: Track.msg  TrackArray.msg
dynamic_mapping/msgs/dynamic_mapping_msgs_ros2/: CMakeLists.txt  msg  package.xml
dynamic_mapping/msgs/jsk_recognition_msgs/: CMakeLists.txt  package.xml
dynamic_mapping/msgs/jsk_recognition_msgs/msg/: BoundingBoxArray.msg
dynamic_mapping/msgs/message_matching_msgs/: CMakeLists.txt  package.xml
dynamic_mapping/msgs/message_matching_msgs/msg/: MatchedPair.msg
panoptic_gridmap/: CMakeLists.txt  README.md  package.xml
panoptic_gridmap/config/: color_to_label.yaml  config.yaml  id_to_label.yaml  label_to_cost.yaml
panoptic_gridmap/include/panoptic_gridmap/: SemanticMap.h
panoptic_gridmap/launch/: semantic_map.launch
panoptic_gridmap/src/: SemanticMap.cpp  semantic_map_node.cpp
