<?xml version="1.0"?>
<package format="2">
    <name>panoptic_gridmap</name>
    <version>0.0.0</version>
    <description>Simple semantic gridmap</description>
    <maintainer email="lterenzi@ethz.ch">Lorenzo Terenzi</maintainer>
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
    <!--   <build_depend>cmake_clang_tools</build_depend> -->
    <depend>roscpp</depend>
    <depend>grid_map_core</depend>
    <depend>grid_map_ros</depend>
    <depend>grid_map_cv</depend>
    <depend>grid_map_filters</depend>
    <depend>grid_map_loader</depend>
    <depend>grid_map_msgs</depend>
    <depend>grid_map_octomap</depend>
    <depend>grid_map_rviz_plugin</depend>
    <depend>grid_map_visualization</depend>
    <depend>sensor_msgs</depend>
    <depend>pcl</depend>
    <depend>pcl_ros</depend>
    <depend>tf</depend>
</package>
