<?xml version="1.0"?>
<package format="2">
    <name>dynamic_mapping</name>
    <version>0.0.0</version>
    <description>The dynamic_mapping package</description>

    <maintainer email="peyschen@ethz.ch">Pol Eyschen</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>cv_bridge</depend>
    <depend>jsk_recognition_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>ground_remover</depend>
    <depend>tf_conversions</depend>
    <depend>tf2</depend>
    <depend>tf2_sensor_msgs</depend>
    <depend>dynamic_mapping_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>open3d_catkin</depend>
    <depend>nodelet</depend>
    <depend>message_matching_msgs</depend>
    <depend>message_matching</depend>

    <export>
        <nodelet plugin="${prefix}/nodelet_plugins.xml" />
    </export>
</package>
