<?xml version="1.0"?>
<package format="3">
    <name>dynamic_mapping</name>
    <version>0.0.0</version>
    <description>The dynamic_mapping package</description>

    <maintainer email="peyschen@ethz.ch">Pol Eyschen</maintainer>

    <license>TODO</license>

    <!-- Build and execution dependencies -->
    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>rclcpp</depend>
    <depend>cv_bridge</depend>
    <depend>jsk_recognition_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>ground_remover</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_sensor_msgs</depend>
    <depend>dynamic_mapping_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>open3d</depend>
    <depend>message_matching_msgs</depend>

    <!-- Exported interfaces -->
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
