<?xml version="1.0"?>
<package format="2">
  <name>ellipsoid_fit</name>
  <version>0.0.1</version>
  <description>Ellipsoid fitting node for ROS 2</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>