<?xml version="1.0"?>
<package format="3">
  <name>ground_plane_removal</name>
  <version>0.5.0</version>
  <description>Tree detector from point cloud maps</description>

  <license>BSD</license>

  <author email="jelavice@ethz.ch">EJ</author>
  <maintainer email="jelavice@ethz.ch">EJ</maintainer>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>pcl_conversions</depend>
  <depend>grid_map_pcl</depend>
  <depend>grid_map_core</depend>
  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <!-- Export the build type -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
