<?xml version="1.0"?>
<package format="2">
	<name>ground_remover</name>
	<version>0.0.0</version>
	<description>The ground_remover package</description>

	<maintainer email="pol@todo.todo">Pol Eyschen</maintainer>

	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>ground_plane_removal</depend>
	<depend>tree_detection_ros</depend>
	<depend>pcl_conversions</depend>
	<depend>sensor_msgs</depend>
	<depend>roscpp</depend>
	<depend>roslib</depend>

</package>
