<?xml version="1.0"?>
<package format="3">
    <name>ground_remover</name>
    <version>0.0.0</version>
    <description>The ground_remover package</description>

    <maintainer email="pol@todo.todo">Pol Eyschen</maintainer>

    <license>TODO</license>

    <!-- Build tools -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- Dependencies -->
    <depend>ground_plane_removal</depend>
    <!--<depend>tree_detection_ros</depend> -->
    <depend>pcl_conversions</depend>
    <depend>sensor_msgs</depend>
    <depend>rclcpp</depend>
    <depend>grid_map_pcl</depend>
    <depend>grid_map_core</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
