<?xml version="1.0"?>
<package format="2">
  <name>message_matching</name>
  <version>0.0.0</version>
  <description>Package providing means to match lidar point cloud data with camera images</description>
  <author email="peyschen@ethz.ch">Pol Eyschen</author>
  <maintainer email="peyschen@ethz.ch">Pol Eyschen</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>sensor_msg</depend>
  <depend>fkie_message_filters</depend>
  <depend>message_matching_msgs</depend>


  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
