<?xml version="1.0"?>
<package format="3">
  <name>message_matching</name>
  <version>0.0.0</version>
  <description>Package providing means to match lidar point cloud data with camera images</description>
  <author email="peyschen@ethz.ch">Pol Eyschen</author>
  <maintainer email="peyschen@ethz.ch">Pol Eyschen</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
  <depend>message_matching_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
