<?xml version="1.0"?>
<package format="3">
  <name>dynamic_mapping_msgs</name>
  <version>0.0.0</version>
  <description>Contains messages needed for dynamic mapping</description>
  <maintainer email="peyschen@student.ethz.ch">Pol Eyschen</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
 
</package>
