<?xml version="1.0"?>
<package format="2">
	<name>message_matching_msgs</name>
	<version>0.0.0</version>
	<description>Contains messages needed for message matching</description>

	<maintainer email="peyschen@ethz.ch">Pol Eyschen</maintainer>


	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>message_generation</build_depend>
	<exec_depend>message_runtime</exec_depend>
	<depend>sensor_msgs</depend>
	<depend>std_msgs</depend>
</package>
